molecule.{h,cc}: Molecule class (single-atom so far).

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,7 +3,9 @@ SUBDIRS = tests
 bin_PROGRAMS = pdb2str
 
 noinst_LTLIBRARIES = libMol.la
-libMol_la_SOURCES = coord3D.cc coord3D.h  atom.cc atom.h
+libMol_la_SOURCES = coord3D.cc coord3D.h \
+	atom.cc atom.h \
+	molecule.h molecule.cc
 #
 AM_CPPFLAGS= -Wall -DBCPT_MAINTAINER=\"@BCPT_MAINTAINER@\" -I$(top_srcdir)/src/
 AM_LDFLAGS = -pedantic -ansi -fwritable-strings
