--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,9 +1,9 @@
 SUBDIRS = tests
 
 noinst_LTLIBRARIES = libMol.la
-libMol_la_SOURCES = coord3D.cc coord3D.h \
-	atom.h atom.cc atomString.cc \
-	molecule.h molecule.cc moleculePDBread.cc \
+libMol_la_SOURCES = point3D.cc point3D.h \
+	atom.h atom.cc atomPDB.cc \
+	molecule.h molecule.cc moleculePDB.cc \
 	system.h system.cc
 
 AM_CPPFLAGS= -std=c++0x -Wall -DBCPT_MAINTAINER=\"@BCPT_MAINTAINER@\" -I$(top_srcdir)/lib/
