lib/monatomic: mono atomic molecule derived from Molecule.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -4,6 +4,7 @@ noinst_LTLIBRARIES = libMol.la
 libMol_la_SOURCES = point3D.cc point3D.h \
 	atom.h atom.cc atomPDB.cc \
 	molecule.h molecule.cc moleculePDB.cc \
+	monatomic.h \
 	system.h system.cc
 
 AM_CPPFLAGS= -std=c++0x -Wall -DBCPT_MAINTAINER=\"@BCPT_MAINTAINER@\" -I$(top_srcdir)/lib/
