lib/bond: bond between two molecules.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -3,6 +3,7 @@ SUBDIRS = tests
 noinst_LTLIBRARIES = libMol.la
 libMol_la_SOURCES = point3D.cc point3D.h \
 	atom.h atom.cc atomPDB.cc \
+	bond.h bond.cc \
 	molecule.h molecule.cc moleculePDB.cc \
 	monatomic.h \
 	system.h system.cc
