lib/: molecule (and atom): read PDB and PQR.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -2,9 +2,9 @@ SUBDIRS = tests
 
 noinst_LTLIBRARIES = libMol.la
 libMol_la_SOURCES = point3D.cc point3D.h \
-	atom.h atom.cc atomPDB.cc \
+	atom.h atom.cc atomPDB.cc atomPQR.cc \
 	bond.h bond.cc \
-	molecule.h molecule.cc moleculePDB.cc \
+	molecule.h molecule.cc moleculePDB.cc moleculePQR.cc \
 	monatomic.h \
 	system.h system.cc
 
