--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -66,8 +66,8 @@ CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 LTLIBRARIES = $(noinst_LTLIBRARIES)
 libMol_la_LIBADD =
-am_libMol_la_OBJECTS = point3D.lo atom.lo atomPDB.lo bond.lo \
-	molecule.lo moleculePDB.lo system.lo
+am_libMol_la_OBJECTS = point3D.lo atom.lo atomPDB.lo atomPQR.lo \
+	bond.lo molecule.lo moleculePDB.lo moleculePQR.lo system.lo
 libMol_la_OBJECTS = $(am_libMol_la_OBJECTS)
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
@@ -261,9 +261,9 @@ top_srcdir = @top_srcdir@
 SUBDIRS = tests
 noinst_LTLIBRARIES = libMol.la
 libMol_la_SOURCES = point3D.cc point3D.h \
-	atom.h atom.cc atomPDB.cc \
+	atom.h atom.cc atomPDB.cc atomPQR.cc \
 	bond.h bond.cc \
-	molecule.h molecule.cc moleculePDB.cc \
+	molecule.h molecule.cc moleculePDB.cc moleculePQR.cc \
 	monatomic.h \
 	system.h system.cc
 
@@ -326,9 +326,11 @@ distclean-compile:
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/atom.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/atomPDB.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/atomPQR.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/bond.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/molecule.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/moleculePDB.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/moleculePQR.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/point3D.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/system.Plo@am__quote@
 
