lib/angle: bond angle class, tests needed.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -4,6 +4,7 @@ noinst_LTLIBRARIES = libMol.la
 libMol_la_SOURCES = point3D.cc point3D.h \
 	atom.h atom.cc atomPDB.cc atomPQR.cc \
 	bond.h bond.cc \
+	angle.h angle.cc \
 	molecule.h molecule.cc moleculePDB.cc moleculePQR.cc \
 	monatomic.h \
 	system.h system.cc
