lib/molecule: setAngleLinear(): angle bonds along the 'chain'
In lib/:

* tests/testMolecule.cc: tests setAngleLinear() ok.

* moleculeAngle.cc: setAngleLinear(): create angle bonds in a
molecule walking along the 'chain'.

* angle.cc atom.cc molecule.cc: angle stuff addded.

* molecule.cc -> molecule.cc, moleculeBonds.cc:

--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -68,7 +68,7 @@ LTLIBRARIES = $(noinst_LTLIBRARIES)
 libMol_la_LIBADD =
 am_libMol_la_OBJECTS = point3D.lo atom.lo atomPDB.lo atomPQR.lo \
 	bond.lo angle.lo molecule.lo moleculePDB.lo moleculePQR.lo \
-	system.lo
+	moleculeBonds.lo moleculeAngles.lo system.lo
 libMol_la_OBJECTS = $(am_libMol_la_OBJECTS)
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
@@ -265,7 +265,7 @@ libMol_la_SOURCES = point3D.cc point3D.h \
 	atom.h atom.cc atomPDB.cc atomPQR.cc \
 	bond.h bond.cc \
 	angle.h angle.cc \
-	molecule.h molecule.cc moleculePDB.cc moleculePQR.cc \
+	molecule.h molecule.cc moleculePDB.cc moleculePQR.cc moleculeBonds.cc moleculeAngles.cc \
 	monatomic.h \
 	system.h system.cc
 
@@ -332,6 +332,8 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/atomPQR.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/bond.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/molecule.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/moleculeAngles.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/moleculeBonds.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/moleculePDB.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/moleculePQR.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/point3D.Plo@am__quote@
