contrib/: dir for various scripts.

--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.69])
-AC_INIT([bcp-tools], [0.2.0], [s.kondrat@fz-juelich.de])
+AC_INIT([bcp-tools], [0.2.1], [s.kondrat@fz-juelich.de])
 
 AM_INIT_AUTOMAKE()
 AC_CONFIG_MACRO_DIR([m4])
@@ -38,5 +38,7 @@ AC_FUNC_REALLOC
 AC_CONFIG_FILES([Makefile
                  lib/Makefile
                  lib/tests/Makefile
-                 tools/Makefile])
+                 tools/Makefile
+		 contrib/Makefile
+		 contrib/bdbox-run])
 AC_OUTPUT
