--- a/contrib/Makefile.in
+++ b/contrib/Makefile.in
@@ -80,7 +80,7 @@ build_triplet = @build@
 host_triplet = @host@
 subdir = contrib
 DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/Makefile.am \
-	$(srcdir)/bdbox-run.in ChangeLog
+	$(srcdir)/bdbox-run.in $(srcdir)/bdbox-xyz.in ChangeLog
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/m4/libtool.m4 \
 	$(top_srcdir)/m4/ltoptions.m4 $(top_srcdir)/m4/ltsugar.m4 \
@@ -90,7 +90,7 @@ am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(install_sh) -d
 CONFIG_HEADER = $(top_builddir)/config.h
-CONFIG_CLEAN_FILES = bdbox-run
+CONFIG_CLEAN_FILES = bdbox-run bdbox-xyz
 CONFIG_CLEAN_VPATH_FILES =
 am__vpath_adj_setup = srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`;
 am__vpath_adj = case $$p in \
@@ -150,8 +150,10 @@ AUTOCONF = @AUTOCONF@
 AUTOHEADER = @AUTOHEADER@
 AUTOMAKE = @AUTOMAKE@
 AWK = @AWK@
+BCPT_AVERAGE = @BCPT_AVERAGE@
 BCPT_MAINTAINER = @BCPT_MAINTAINER@
 BCPT_MOLSYS = @BCPT_MOLSYS@
+BCPT_XYZ = @BCPT_XYZ@
 BDBOX = @BDBOX@
 BINDIR = @BINDIR@
 CC = @CC@
@@ -265,7 +267,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-bin_SCRIPTS = bdbox-run
+bin_SCRIPTS = bdbox-run  bdbox-xyz
 EXTRA_DIST = $(bin_SCRIPTS)
 CLEANFILES = $(bin_SCRIPTS)
 all: all-am
@@ -302,6 +304,8 @@ $(ACLOCAL_M4):  $(am__aclocal_m4_deps)
 	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh
 $(am__aclocal_m4_deps):
 bdbox-run: $(top_builddir)/config.status $(srcdir)/bdbox-run.in
+	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
+bdbox-xyz: $(top_builddir)/config.status $(srcdir)/bdbox-xyz.in
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 install-binSCRIPTS: $(bin_SCRIPTS)
 	@$(NORMAL_INSTALL)
