--- a/tools/Makefile.in
+++ b/tools/Makefile.in
@@ -221,8 +221,10 @@ AUTOCONF = @AUTOCONF@
 AUTOHEADER = @AUTOHEADER@
 AUTOMAKE = @AUTOMAKE@
 AWK = @AWK@
+BCPT_AVERAGE = @BCPT_AVERAGE@
 BCPT_MAINTAINER = @BCPT_MAINTAINER@
 BCPT_MOLSYS = @BCPT_MOLSYS@
+BCPT_XYZ = @BCPT_XYZ@
 BDBOX = @BDBOX@
 BINDIR = @BINDIR@
 CC = @CC@
