--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.63])
-AC_INIT([bcp-tools], [0.2.8], [s.kondrat@fz-juelich.de])
+AC_INIT([bcp-tools], [0.2.10], [s.kondrat@fz-juelich.de])
 
 AM_INIT_AUTOMAKE()
 AC_CONFIG_MACRO_DIR([m4])
@@ -90,9 +90,10 @@ AC_CONFIG_FILES([Makefile
                  lib/Makefile
                  lib/tests/Makefile
                  tools/Makefile
+		 scripts/Makefile
+		 scripts/bd_flex-run
+		 scripts/bdbox-run
+		 scripts/bdbox-xyz
 		 contrib/Makefile
-		 contrib/bd_flex-run
-		 contrib/bdbox-run
-		 contrib/bdbox-xyz
 		 ])
 AC_OUTPUT
